// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`The CollegeSchema zod schema > matches the snapshot 1`] = `
ZodEnum {
  "_def": {
    "typeName": "ZodEnum",
    "values": [
      "Architecture",
      "Arts and Sciences",
      "Business",
      "Dental Hygiene",
      "Denistry",
      "Education and Human Ecology",
      "Engineering",
      "Environment and Natural Resources",
      "Food, Agricultural and Environmental Sciences",
      "Health and Rehabilitation Sciences",
      "Medicine",
      "Nursing",
      "Optometry",
      "Pharmacy",
      "Pre-Professional",
      "Public Affairs",
      "Public Health",
      "Social Work",
      "University Exploration",
    ],
  },
  "and": [Function],
  "array": [Function],
  "brand": [Function],
  "catch": [Function],
  "default": [Function],
  "describe": [Function],
  "isNullable": [Function],
  "isOptional": [Function],
  "nullable": [Function],
  "nullish": [Function],
  "optional": [Function],
  "or": [Function],
  "parse": [Function],
  "parseAsync": [Function],
  "pipe": [Function],
  "promise": [Function],
  "readonly": [Function],
  "refine": [Function],
  "refinement": [Function],
  "safeParse": [Function],
  "safeParseAsync": [Function],
  "spa": [Function],
  "superRefine": [Function],
  "transform": [Function],
}
`;

exports[`The CollegeTuple constant > matches the snapshot 1`] = `
[
  "Architecture",
  "Arts and Sciences",
  "Business",
  "Dental Hygiene",
  "Denistry",
  "Education and Human Ecology",
  "Engineering",
  "Environment and Natural Resources",
  "Food, Agricultural and Environmental Sciences",
  "Health and Rehabilitation Sciences",
  "Medicine",
  "Nursing",
  "Optometry",
  "Pharmacy",
  "Pre-Professional",
  "Public Affairs",
  "Public Health",
  "Social Work",
  "University Exploration",
]
`;
